fix desgin on mobiles

--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ table{
 
 th{
   padding: 20px 15px;
-  text-align: right;
+  text-align: center;
   font-weight: 500;
   font-size: 20px;
   color: #000;
@@ -64,7 +64,7 @@ th{
 }
 td{
   padding: 15px;
-  text-align: right;
+  text-align: center;
   vertical-align:middle;
   font-weight: 300;
   font-size: 20px;
@@ -78,9 +78,10 @@ th:first-child, td:first-child {
   position: sticky;
   right: 0px;
   z-index: 2;
-  width: 200px;
+  width: 150px;
   background-color: rgba(255,255,255,0.8);
   color: #000;
+  text-align: right;
   
 
 }
@@ -118,6 +119,7 @@ thead {
   border-bottom: 2px solid #ccc;
   background-color: rgba(255,255,255,0.8);
   color: #000;
+  z-index: 3;
 }
 
 .headertable{
@@ -144,11 +146,19 @@ thead {
     width: 90vw;
     margin-left: -30px;
   }
+  *{
+    font-size: 15px !important;
+  }
 }
 #theadTableName{
   position: sticky;
   top: 10px !important;
   color: #000;
-  text-align: right;
+  text-align: center;
   z-index: 3;
+  right: 0px;
+
+  width: 150px;
+  border-radius: 10px;
+  background: linear-gradient(to right, #1a516d, #5DC0CD);
 }
